9 Oct 2006 - bear

    0.7.4 release
    Setting trunk to 0.7.5

5 Oct 2006 - darshana

    Fixed "ago" bug -- Issue #7 http://code.google.com/p/parsedatetime/issues/detail?id=7
    
    Fixed bug where default year for dates that are in the future get next year, not 
    current year -- Issue #8 http://code.google.com/p/parsedatetime/issues/detail?id=8

    Fixed strings like "1 week ago", "lunch tomorrow"
    
25 Sep 2006 - bear

    0.7.3 release
    Setting trunk to 0.7.4

13 Sep 2006 - bear

    Added Darshana as an author and updated the copyright text
    Added "eom" and "eoy" tests

11 Sep 2006 - bear

    Fixed a subtle dictionary reference bug in buildSources() that was causing
    any source related modifier to not honor the day, month or year.  It only
    started being seen as I was working on adding "eod" support as a 'true'
    modifier instead.

    Found another subtle bug in evalModifier() if the modifier was followed
    by the day of the week - the offset math was not consistent with the
    other day-of-week offset calculations.

    Worked on converting "eod" support from the special case modifier to work
    as a true modifier.

    The following is now supported:
        eod tomorrow
        tomorrow eod
        monday eod
        eod monday
        meeting eod
        eod meeting

10 Sep 2006 - bear

    Added a sub-range test in response to Issue #6 http://code.google.com/p/parsedatetime/issues/detail?id=6

    Not that it works, just wanted to start the process.

6 Sep 2006 - bear

    Alan Green filed Issue #5 http://code.google.com/p/parsedatetime/issues/detail?id=5

    In it he asked for support for Australian date formats "dd-mm-yyyy"

    This is the first attempt at supporting the parsing of dates where the order of the
    day, month and year can vary.  I adjusted the parseDate() code to be data driven
    and added a dp_order list to the Constants() class that is either initialized to the